[gd_scene load_steps=2 format=3 uid="uid://bbkpclmd1mwsm"]

[ext_resource type="Script" uid="uid://b5n08o0rhyxoq" path="res://assets/scripts/pause_menu.gd" id="1_dplge"]

[node name="Pause" type="Control"]
process_mode = 3
z_index = 8
layout_mode = 3
anchors_preset = 0
offset_left = -710.0
offset_top = -1302.0
offset_right = 2235.0
offset_bottom = 214.0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dplge")

[node name="Panel" type="Panel" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1472.5
offset_top = 1710.0
offset_right = 1448.5
offset_bottom = 3223.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.11143444
anchor_top = 0.12491738
anchor_right = 0.88856554
anchor_bottom = 1.1645738
offset_bottom = -0.00012207031
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_font_sizes/font_size = 300
text = "Resume"

[node name="Quit2Selection" type="Button" parent="Panel/VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_font_sizes/font_size = 300
text = "Quit to selection"

[node name="QuitGame" type="Button" parent="Panel/VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_font_sizes/font_size = 300
text = "Quit game"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -577.0
offset_right = 577.0
offset_bottom = 413.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "PAUSED
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit2Selection" to="." method="_on_quit_2_selection_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
